<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:padding="5dp"
    tools:context=".stagnantactivities.ShowStagnantFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/show_list">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:paddingBottom="3dp"
                android:text="@string/control"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:paddingBottom="3dp"
                android:text="@string/amount"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:paddingBottom="3dp"
                android:text="@string/price"

                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:paddingBottom="3dp"
                android:text="@string/type"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:paddingBottom="3dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="22sp" />


        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stagnantItemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>