<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/tbModel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/search_stagnant"
                    android:id="@+id/ivControl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_delete" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </TableRow>
    </TableLayout>


</LinearLayout>