<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".stagnantactivities.AddStagnantFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stagnant_name"
            android:theme="@style/EditText"
            app:hintTextColor="@color/app_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_stagnant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textPersonName"
                android:textColorHint="@color/app_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/stagnantTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:entries="@array/stagnant_type" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stagnant_amount"
            android:theme="@style/EditText"
            app:hintTextColor="@color/app_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="number"
                android:textColorHint="@color/app_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/stagnantAmountSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:entries="@array/unit_type" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unit_price"
            android:theme="@style/EditText"
            app:hintTextColor="@color/app_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUnitPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="numberDecimal"
                android:textColorHint="@color/app_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/priceType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:entries="@array/price_type" />

        <Button
            android:id="@+id/btnExpiryDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@android:drawable/ic_menu_my_calendar"
            android:text="@string/expiryDate" />

        <TextView
            android:id="@+id/tvExpiryDateShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="dd/mm/yyyy"
            android:textSize="22dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sales_percentage"
            android:theme="@style/EditText"
            app:hintTextColor="@color/app_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Sales_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="number"
                android:textColorHint="@color/app_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_info"
            android:theme="@style/EditText"
            app:hintTextColor="@color/app_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContactInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColorHint="@color/app_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/ic_menu_send"
            android:drawableRight="@drawable/ic_menu_send"
            android:text="@string/send" />

    </LinearLayout>

</ScrollView>