<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00C97A"
            android:paddingLeft="10dp" />

        <ImageView
            android:layout_width="@dimen/image_fast_width"
            android:layout_height="@dimen/image_fast_height"
            android:layout_gravity="right"
            android:theme="@style/toolbar_image" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/app_color"
                android:src="@drawable/sharp_perm_identity_white_48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="25sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/email_address"
                android:textColorHint="@color/app_color"
                app:boxBackgroundColor="@color/app_color"
                app:hintTextColor="@color/app_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/app_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/password"
                android:textColorHint="@color/app_color"
                app:hintTextColor="@color/app_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:textColorHint="@color/app_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btn_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/did_you_forget_password"
                android:textColor="@color/app_color"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnJoinNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/app_color"
                android:text="@string/enter_now"
                android:textColor="#fff"
                tools:targetApi="lollipop" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>