<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register.RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:theme="@style/toolbar" />

        <ImageView
            android:layout_width="@dimen/image_fast_width"
            android:layout_height="@dimen/image_fast_height"
            android:layout_gravity="right"
            android:theme="@style/toolbar_image" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:src="@drawable/pharmacy_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pharmacy_name"
                android:theme="@style/EditText"
                app:hintTextColor="@color/app_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pharmacy_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/app_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pharmacy_manager_name"
                android:theme="@style/EditText"

                app:hintTextColor="@color/app_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pharmacy_manager_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pharmacy_owner_name"
                android:theme="@style/EditText"
                app:hintTextColor="@color/app_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pharmacy_owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/chooseCitySpinner"
                style="@style/spinner_style" />

            <Spinner
                android:id="@+id/chooseCenterSpinner"
                style="@style/spinner_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="right"
                android:paddingEnd="20dp"
                android:paddingRight="20dp">

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/ButtonNext" />

                <TextView
                    android:id="@+id/btn_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/previous"
                    android:textColor="@color/app_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/here"
                    android:textColor="@android:color/holo_blue_light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_have_account" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

