<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.AccountInfoActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00C97A"
            android:paddingLeft="10dp" />

        <ImageView
            android:layout_width="@dimen/image_fast_width"
            android:layout_height="@dimen/image_fast_height"
            android:layout_gravity="right"
            android:theme="@style/toolbar_image" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:src="@drawable/pharmacy_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/email_address"
                android:textColorHint="@color/app_color"
                app:hintTextColor="@color/app_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@color/white"
                    android:textColorHint="@color/app_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/password"
                android:textColorHint="@color/app_color"
                app:hintTextColor="@color/app_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingEnd="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="right"
                android:paddingRight="20dp">

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_now"
                    />

                <TextView
                    android:id="@+id/btn_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/previous"
                    android:textColor="@color/app_color" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>